force-app/main/default/objects/Televisit_Record_Vendor__c/Televisit_Record_Vendor__c.object-meta.xml
<CustomObject>
    <label>Televisit Record Vendor</label>
    <nameField>
        <label>Televisit Record Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>televisit Record Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>