force-app/main/default/objects/Televisit_Record_Vendor__c/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>