force-app/main/default/objects/Televisit_Record_Vendor__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>televisit Record Vendors</relationshipLabel>
    <relationshipName>televisit_Record_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>