force-app/main/default/objects/Televisit_Record_Vendor__c/fields/Default_Country__c.field-meta.xml
<CustomField>
    <fullName>Default_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>