force-app/main/default/objects/Televisit_Record_Vendor__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please ensure using same Project Name entered in Vonage dashboard. Also if there is any update happening on vonage project name its should be reflected here to be in sync.</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>