force-app/main/default/objects/Televisit_Record_Vendor__c/fields/Study_Protocol_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol_Id__c</fullName>
    <description>Future reference to map project name with protocol Id from Vonage intergration</description>
    <formula>Clinical_Trial_Profile__r.Protocol_ID__c</formula>
    <label>Study Protocol Id</label>
    <type>Text</type>
</CustomField>