force-app/main/default/objects/Televisit_Record_Vendor__c/fields/Televisit_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Vendor__c</fullName>
    <label>Televisit Vendor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vonage</fullName>
                <default>true</default>
                <label>Vonage</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>